add docs for redirectUrls sub-api

--- a/docs/references/backend/overview.mdx
+++ b/docs/references/backend/overview.mdx
@@ -153,6 +153,25 @@ Invitation operations are exposed under `clerkClient.invitations`. The following
 
 - [`revokeInvitation()`](/docs/references/backend/invitations/revoke-invitation)
 
+## Redirect URL operations
+
+Redirect URLs are whitelisted URLs that facilitate secure authentication flows in native applications (e.g. React Native, Expo). In these contexts, Clerk ensures that security-critical nonces are passed only to the whitelisted URLs.
+
+Redirect URL operations are exposed under `clerkClient.redirectUrls`. The following methods are available:
+
+### Get 
+
+- [`getRedirectUrlList()`]
+- [`getRedirectUrl()`]
+
+### Create 
+
+- [`createRedirectUrl()`]
+
+### Delete
+
+- [`deleteRedirectUrl()`]
+
 ## Email `create` operations (deprecated)
 
 <Callout type="danger">
