add example for getRedirectUrlList

--- a/docs/references/backend/redirect-url/get-redirect-url-list.mdx
+++ b/docs/references/backend/redirect-url/get-redirect-url-list.mdx
@@ -17,8 +17,18 @@ function getRedirectUrlList(): () => Promise<PaginatedResourceResponse<RedirectU
 const response = await clerkClient.redirectUrls.getRedirectUrlList();
 
 console.log(response);
-/* 
-
+/* In this example, you can see that data is an array of RedirectUrl objects, and is populated with one RedirectUrl.
+{
+  data: [
+    _RedirectUrl {
+      id: 'ru_2bxLHVfYsA13r8iKHWoY8SAr9az',
+      url: 'https://example.com',
+      createdAt: 1707151695693,
+      updatedAt: 1707151695693
+    }
+  ],
+  totalCount: 1
+}
 */
 ```
 
