add email address subapi

--- a/docs/references/backend/overview.mdx
+++ b/docs/references/backend/overview.mdx
@@ -159,23 +159,45 @@ Redirect URLs are whitelisted URLs that facilitate secure authentication flows i
 
 Redirect URL operations are exposed under `clerkClient.redirectUrls`. The following methods are available:
 
-### Get 
+### Redirect URL `get` operations 
 
-- [`getRedirectUrlList()`]
-- [`getRedirectUrl()`]
+- [`getRedirectUrlList()`](/docs/references/backend/redirect-urls/get-redirect-url-list)
+- [`getRedirectUrl()`](/docs/references/backend/redirect-urls/get-redirect-url)
 
-### Create 
+### Redirect URL `create` operations 
 
-- [`createRedirectUrl()`]
+- [`createRedirectUrl()`](/docs/references/backend/redirect-urls/create-redirect-url)
 
-### Delete
+### Redirect URL `delete` operations
 
-- [`deleteRedirectUrl()`]
+- [`deleteRedirectUrl()`](/docs/references/backend/redirect-urls/delete-redirect-url)
+
+## Email address operations
+
+A user can be associated with one or more email addresses.
+
+Email address operations are exposed under `clerkClient.emailAddresses`. The following methods are available:
+
+### Email address `get` operations
+
+- [`getEmailAddress()`](/docs/references/backend/email-addresses/get-email-address)
+
+### Email address `create` operations
+
+- [`createEmailAddress()`](/docs/references/backend/email-addresses/create-email-address)
+
+### Email address `update` operations
+
+- [`updateEmailAddress()`](/docs/references/backend/email-addresses/update-email-address)
+
+### Email address `delete` operations
+
+- [`deleteEmailAddress()`](/docs/references/backend/email-addresses/delete-email-address)
 
 ## Email `create` operations (deprecated)
 
 <Callout type="danger">
-  This operation is now deprecated. Clerk no longer supports sending Emails through Clerk's backend API.
+  This operation is now deprecated. Clerk no longer supports sending emails through Clerk's backend API.
 </Callout>
 
 ## SMS message operations (deprecated)
