add phone numbers subapi

--- a/docs/references/backend/overview.mdx
+++ b/docs/references/backend/overview.mdx
@@ -194,6 +194,28 @@ Email address operations are exposed under `clerkClient.emailAddresses`. The fol
 
 - [`deleteEmailAddress()`](/docs/references/backend/email-addresses/delete-email-address)
 
+## Phone number operations
+
+A user can be associated with one or more phone numbers.
+
+Phone number operations are exposed under `clerkClient.phoneNumbers`. The following methods are available:
+
+### Phone number `get` operations
+
+- [`getPhoneNumber()`](/docs/references/backend/phone-numberes/get-phone-number)
+
+### Phone number `create` operations
+
+- [`createPhoneNumber()`](/docs/references/backend/phone-numberes/create-phone-number)
+
+### Phone number `update` operations
+
+- [`updatePhoneNumber()`](/docs/references/backend/phone-numberes/update-phone-number)
+
+### Phone number `delete` operations
+
+- [`deletePhoneNumber()`](/docs/references/backend/phone-numberes/delete-phone-number)
+
 ## Email `create` operations (deprecated)
 
 <Callout type="danger">
