document missing methods: updateUserMetadata, getUserOauthAccessToken, disableUserMFA, and verifyPassword

--- a/docs/references/backend/overview.mdx
+++ b/docs/references/backend/overview.mdx
@@ -57,6 +57,7 @@ User operations are exposed under `clerkClient.users`. The following methods are
 ### User `create` operations
 
 - [`createUser()`](/docs/references/backend/user/create-user)
+- [`verifyPassword()`](/docs/references/backend/user/verify-password)
 
 ### User `update` operations
 
