document missing methods: updateUserMetadata, getUserOauthAccessToken, disableUserMFA, and verifyPassword

--- a/docs/references/backend/overview.mdx
+++ b/docs/references/backend/overview.mdx
@@ -52,6 +52,7 @@ User operations are exposed under `clerkClient.users`. The following methods are
 - [`getUserList()`](/docs/references/backend/user/get-user-list)
 - [`getUser()`](/docs/references/backend/user/get-user)
 - [`getCount()`](/docs/references/backend/user/get-count)
+- [`getUserOauthAccessToken()`](/docs/references/backend/user/get-user-oauth-access-token)
 
 ### User `create` operations
 
@@ -60,10 +61,12 @@ User operations are exposed under `clerkClient.users`. The following methods are
 ### User `update` operations
 
 - [`updateUser()`](/docs/references/backend/user/update-user)
+- [`updateUserMetadata()`](/docs/references/backend/user/update-user-metadata)
 
 ### User `delete` operations
 
 - [`deleteUser()`](/docs/references/backend/user/delete-user)
+- [`disableUserMFA()`](/docs/references/backend/user/disable-user-mfa)
 
 ## Organization operations
 
