add user/get-organization-membership-list to manifest (sidenav)

--- a/docs/references/backend/overview.mdx
+++ b/docs/references/backend/overview.mdx
@@ -52,6 +52,7 @@ User operations are exposed under `clerkClient.users`. The following methods are
 - [`getUserList()`](/docs/references/backend/user/get-user-list)
 - [`getUser()`](/docs/references/backend/user/get-user)
 - [`getCount()`](/docs/references/backend/user/get-count)
+- [`getOrganizationMembershipList()`](/docs/references/backend/user/get-organization-membership-list)
 - [`getUserOauthAccessToken()`](/docs/references/backend/user/get-user-oauth-access-token)
 
 ### User `create` operations
