--- a/docs/references/react/use-sign-in.mdx
+++ b/docs/references/react/use-sign-in.mdx
@@ -7,180 +7,71 @@ description: The useSignIn() hook provides access to the SignIn object, which al
 
 The `useSignIn()` hook provides access to the [`SignIn`](/docs/references/javascript/sign-in/sign-in) object, which allows you to check the current state of a sign-in. This is also useful for creating a custom sign-in flow.
 
-## Usage
+## `useSignIn()` returns
 
-<Tabs type="framework" items={["Next.js", "React"]}>
-  <Tab>
-    #### Check the current sign-in status
-
-    ```tsx filename="pages/index.tsx"
-    import { useSignIn } from "@clerk/nextjs";
-
-    export default function SignInStep() {
-      const { isLoaded, signIn } = useSignIn();
-
-      if (!isLoaded) {
-        // handle loading state
-        return null;
-      }
-
-      return <div>The current sign in attempt status is {signIn.status}.</div>;
-    }
-    ```
-
-    #### Sign in a user with a custom flow
-
-    ```tsx filename="pages/signin.tsx"
-    import { useSignIn } from "@clerk/nextjs";
-    import { useState } from "react";
-
-    export default function SignIn() {
-      const [email, setEmail] = useState("");
-      const [password, setPassword] = useState("");
-
-      const { isLoaded, signIn, setActive } = useSignIn();
-
-      if (!isLoaded) {
-        return null;
-      }
-
-      async function submit(e) {
-        e.preventDefault();
-        await signIn
-          .create({
-            identifier: email,
-            password,
-          })
-          .then((result) => {
-            if (result.status === "complete") {
-              console.log(result);
-              setActive({ session: result.createdSessionId });
-            } else {
-              console.log(result);
-            }
-          })
-          .catch((err) => console.error("error", err.errors[0].longMessage));
-      }
-
-      return (
-        <form onSubmit={submit}>
-          <div>
-            <label htmlFor="email">Email</label>
-            <input
-              type="email"
-              value={email}
-              onChange={(e) => setEmail(e.target.value)}
-            />
-          </div>
-          <div>
-            <label htmlFor="password">Password</label>
-            <input
-              type="password"
-              value={password}
-              onChange={(e) => setPassword(e.target.value)}
-            />
-          </div>
-          <div>
-            <button>Sign in</button>
-          </div>
-        </form>
-      );
-    }
-    ```
-  </Tab>
-
-  <Tab>
-    #### Check the current sign-in status
-
-    ```tsx filename="pages/sign-in-step.tsx"
-    import { useSignIn } from "@clerk/clerk-react";
-
-    export default function SignInStep() {
-      const { isLoaded, signIn } = useSignIn();
-
-      if (!isLoaded) {
-        // handle loading state
-        return null;
-      }
-
-      return <div>The current sign in attempt status is {signIn.status}.</div>;
-    }
-    ```
-
-    #### Sign in a user with a custom flow
-
-    ```tsx filename="pages/signin.tsx"
-    import { useSignIn } from "@clerk/clerk-react";
-    import { useState } from "react";
-
-    export default function SignIn() {
-      const [email, setEmail] = useState("");
-      const [password, setPassword] = useState("");
-
-      const { isLoaded, signIn, setActive } = useSignIn();
-
-      if (!isLoaded) {
-        return null;
-      }
-
-      async function submit(e) {
-        e.preventDefault();
-        await signIn
-          .create({
-            identifier: email,
-            password,
-          })
-          .then((result) => {
-            if (result.status === "complete") {
-              console.log(result);
-              setActive({ session: result.createdSessionId });
-            } else {
-              console.log(result);
-            }
-          })
-          .catch((err) => console.error("error", err.errors[0].longMessage));
-      }
-
-      return (
-        <form onSubmit={submit}>
-          <div>
-            <label htmlFor="email">Email</label>
-            <input
-              type="email"
-              value={email}
-              onChange={(e) => setEmail(e.target.value)}
-            />
-          </div>
-          <div>
-            <label htmlFor="password">Password</label>
-            <input
-              type="password"
-              value={password}
-              onChange={(e) => setPassword(e.target.value)}
-            />
-          </div>
-          <div>
-            <button>Sign in</button>
-          </div>
-        </form>
-      );
-    }
-    ```
-  </Tab>
-</Tabs>
-
-| Values | Description |
+| Name | Type | Description |
 | --- | --- |
-| `isLoaded` | A boolean that is set to `false` until Clerk loads and initializes. |
-| `setActive()` | A function that sets the active session. |
-| `setSession()` (deprecated) | Deprecated in favor of `setActive()`. |
-| `signIn` | An object that contains the current sign-in attempt status and methods to create a new sign-in attempt. |
+| `isLoaded` | `boolean` | A boolean that is set to `false` until Clerk loads and initializes. |
+| `setActive()` | <code>(params: [SetActiveParams](#set-active-params)) => Promise\<void\></code> | A function that sets the active session. |
+| `setSession()` (deprecated) |  Deprecated. | Deprecated in favor of `setActive()`. |
+| `signIn` | [`SignIn`](/docs/references/javascript/sign-in/sign-in) | An object that contains the current sign-in attempt status and methods to create a new sign-in attempt. |
 
-### Result status
+### `SetActiveParams`
+
+| Name | Type | Description |
+| --- | --- | --- |
+| `session` | [`Session`](/docs/references/javascript/session) \| `string` \| `null` | The session resource or session ID (string version) to be set as active. If `null`, the current session is deleted. |
+| `organization` | [`Organization`](/docs/references/javascript/organization/organization) \| `string` \| `null` | The organization resource or organization ID (string version) to be set as active in the current session. If `null`, the currently active organization is removed as active. |
+| `beforeEmit?` | `(session?: Session \| null) => void \| Promise<any>` | Callback run just before the active session and/or organization is set to the passed object. Can be used to hook up for pre-navigation actions. |
+
+## How to use the `useSignIn()` hook
+
+### Check the current state of a sign-in
+
+You can utilize the `useSignIn()` hook to check the current state of a sign-in.
+
+<CodeBlockTabs type="framework" items={["Next.js", "React"]}>
+  ```tsx filename="pages/index.tsx"
+  import { useSignIn } from "@clerk/nextjs";
+
+  export default function SignInStep() {
+    const { isLoaded, signIn } = useSignIn();
+
+    if (!isLoaded) {
+      // handle loading state
+      return null;
+    }
+
+    return <div>The current sign in attempt status is {signIn.status}.</div>;
+  }
+  ```
+
+  ```tsx filename="pages/sign-in-step.tsx"
+  import { useSignIn } from "@clerk/clerk-react";
+
+  export default function SignInStep() {
+    const { isLoaded, signIn } = useSignIn();
+
+    if (!isLoaded) {
+      // handle loading state
+      return null;
+    }
+
+    return <div>The current sign in attempt status is {signIn.status}.</div>;
+  }
+  ```
+</CodeBlockTabs>
+
+The `status` property of the `signIn` object can be one of the following values:
 
 | Values | Descriptiom |
 | --- | --- |
 | `complete` | The user has been signed in and custom flow can proceed to `setActive()` to create session. |
-| `needs_factor_one` | The First Factor verification is missing. One of `email_link`, `email_code`, `phone_code`, `web3_metamask_signature` or `oauth_provider` is required to verify user. See [First Factor](/docs/references/javascript/sign-in/first-factor) for details. |
-| `needs_factor_two` | The Second Factor verification is missing. The Second Factor is an optional step to provide additional verification and includes `phone_code` and `totp`. See [Second Factor](/docs/references/javascript/sign-in/second-factor) for details.|
-| `needs_identifier` | The unqiue identifier for the user was missing. | 
+| `needs_first_factor` | The First Factor verification is missing. One of `email_link`, `email_code`, `phone_code`, `web3_metamask_signature` or `oauth_provider` is required to verify user. See [First Factor](/docs/references/javascript/sign-in/first-factor) for details. |
+| `needs_second_factor` | The Second Factor verification is missing. The Second Factor is an optional step to provide additional verification and includes `phone_code` and `totp`. See [Second Factor](/docs/references/javascript/sign-in/second-factor) for details. |
+| `needs_identifier` | The user's identifier (email address, phone number, username, etc.) hasn't been provided. |
+| `needs_new_password` | The user needs to set a new password. |
+
+### Create a custom sign-in flow
+
+You can also utilize the `useSignIn()` hook to build fully custom sign-in flows, if Clerk's pre-built components don't meet your specific needs or if you require more control over the authentication flow. Different sign-in flows include email and password, email and phone codes, email links, and multifactor (MFA). To learn more about using the `useSignIn()` hook to create custom flows, check out the [custom flow guides](https://clerk.com/docs/custom-flows/overview).
