--- a/docs/references/react/use-sign-in.mdx
+++ b/docs/references/react/use-sign-in.mdx
@@ -30,7 +30,7 @@ The `useSignIn()` hook provides access to the [`SignIn`](/docs/references/javasc
 
 You can utilize the `useSignIn()` hook to check the current state of a sign-in.
 
-<CodeBlockTabs type="framework" items={["Next.js", "React"]}>
+<CodeBlockTabs type="framework" options={["Next.js", "React"]}>
   ```tsx filename="pages/index.tsx"
   import { useSignIn } from "@clerk/nextjs";
 
