update headings to be more specific

--- a/docs/references/react/use-sign-in.mdx
+++ b/docs/references/react/use-sign-in.mdx
@@ -26,7 +26,7 @@ The `useSignIn()` hook provides access to the [`SignIn`](/docs/references/javasc
 
 ## How to use the `useSignIn()` hook
 
-### Check the current state of a sign-in
+### Check the current state of a sign-in with `useSignIn()`
 
 You can utilize the `useSignIn()` hook to check the current state of a sign-in.
 
@@ -72,6 +72,6 @@ The `status` property of the `signIn` object can be one of the following values:
 | `needs_identifier` | The user's identifier (email address, phone number, username, etc.) hasn't been provided. |
 | `needs_new_password` | The user needs to set a new password. |
 
-### Create a custom sign-in flow
+### Create a custom sign-in flow with `useSignIn()`
 
 You can also utilize the `useSignIn()` hook to build fully custom sign-in flows, if Clerk's pre-built components don't meet your specific needs or if you require more control over the authentication flow. Different sign-in flows include email and password, email and phone codes, email links, and multifactor (MFA). To learn more about using the `useSignIn()` hook to create custom flows, check out the [custom flow guides](https://clerk.com/docs/custom-flows/overview).
