stub in the API Reference content type / section

--- a/docs/references/overview.mdx
+++ b/docs/references/overview.mdx
@@ -2,3 +2,7 @@
 title: SDK References
 description: Learn about the Clerk and community SDK's available for integrating Clerk into your application.
 ---
+
+# Clerk APIs
+
+There are 2 different APIs: Frontend API and Backend API. This page should overview the meaningful differences and link to their individual API reference sites
