--- a/docs/guides/nextauth-migration.mdx
+++ b/docs/guides/nextauth-migration.mdx
@@ -3,72 +3,72 @@ title: Migrating to Clerk from NextAuth.js
 description: Migrating from NextAuth.js
 ---
 
+<TutorialHero
+  framework="next"
+  beforeYouStart={[
+    {
+      title: "Set up a Clerk application",
+      link: "https://clerk.com/docs/quickstarts/setup-clerk",
+    }
+  ]}
+>
+
+- Install `@clerk/nextjs`
+- Set environment keys
+- Wrap your Next.js app in `<ClerkProvider />`
+- Setup Sign-up and Sign-in UI
+- Protect your app
+- Read user and session data
+- User IDs as Foreign Keys
+- Create a production instance
+- Migrate users to a production instance
+- Further support
+
+</TutorialHero>
+
 This guide shows how to migrate an application using NextAuth.js to use Clerk for authentication.
 
-## Install `@clerk/nextjs`
+<Steps>
+
+### Install `@clerk/nextjs`
 
 Clerk's Next.js SDK gives you access to prebuilt [components](https://clerk.com/docs/components/overview), [hooks](https://clerk.com/docs/references/nextjs/overview#client-side-helpers), and [helpers](https://clerk.com/docs/references/nextjs/overview) for Next.js Server Components, Route Handlers and Middleware. Install it by running the following command in your terminal:
 
-```tsx
-npm install @clerk/nextjs
+<CodeBlockTabs type="installer" options={["npm", "yarn", "pnpm"]}>
+  ```bash filename="terminal"
+  npm install @clerk/nextjs
+  ```
+
+```bash filename="terminal"
+yarn add @clerk/nextjs
 ```
 
-## Set environment keys
+```bash filename="terminal"
+pnpm add @clerk/nextjs
+```
 
-Create an account on [clerk.com](http://clerk.com) and create a new application.
+</CodeBlockTabs>
+
+### Set environment keys
 
 Store the keys in the `.env.local` file of your Next.js application.
 
-```tsx
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_••••••••••••••••••••••••••••••••••
-CLERK_SECRET_KEY=sk_test_••••••••••••••••••••••••••••••••••
+<InjectKeys>
+
+```sh filename=".env.local"
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY={{pub_key}}
+CLERK_SECRET_KEY={{secret}}
 ```
 
-## Signing in
+</InjectKeys>
 
-### Account Portal
+### Wrap your Next.js app in `<ClerkProvider />`
 
-Account Portal is the fastest way to authenticate your app. It does not require you to build any authentication UI in your app, similar to the [default unbranded pages](https://next-auth.js.org/getting-started/rest-api#get-apiauthsignin) provided by NextAuth. [Read more about Account Portal](https://clerk.com/docs/account-portal/getting-started).
-
-To use the Account Portal, simply replace the links to the sign-in/sign-up pages with `[<SignInButton>](/docs/components/unstyled/sign-in-button)` or `[<SignUpButton>](/docs/components/unstyled/sign-out-button)`.
-
-### Self-hosted UI
-
-If you want sign-in and sign-up pages in your own application, you can use [Clerk's pre-built components](/docs/references/nextjs/custom-signup-signin-pages), or implement the UI yourself using [Clerk's hooks](/docs/custom-flows/overview).
-
-Add the following environment variables to define your sign-in, sign-up, and redirect URLs with Clerk.
-
-```tsx
-NEXT_PUBLIC_CLERK_SIGN_UP_URL=
-NEXT_PUBLIC_CLERK_SIGN_IN_URL=
-NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=
-NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=
-```
-
-You can simply replace the existing UI with Clerk's fully pre-built `<SignIn>` and `<SignUp>` components.
-
-```tsx
-// App Router   - /app/sign-in/[[...sign-in]]/page.tsx
-// Pages Router - /pages/sign-in/[[...index]].tsx
-
-import { SignIn } from "@clerk/nextjs"
- 
-export default function Page() {
-  return <SignIn />;
-}
-```
-
-For fully custom UI, replace the existing functionality with [appropriate custom flows](https://clerk.com/docs/custom-flows/overview#custom-flows). With Custom flows, you leverage Clerk's React hooks `useSignIn` and `useSignUp` to build fully custom UI that handles authentication with email and password, OAuth, magic links, OTP etc.
-
-(maybe a small example?)
-
-## Protecting your app
-
-### Provider
+#### Remove your NextAuth.js `<SessionProvider />`
 
 Replace `<SessionProvider session={session}>` with `<ClerkProvider>` if you are using App Router or `<ClerkProvider {...pageProps}>` if you are using Pages Router.
 
-```tsx
+```tsx filename="_app.tsx"
 // With NextAuth.js
 
 import { SessionProvider } from "next-auth/react"
@@ -85,134 +85,231 @@ export default function App({
 }
 ```
 
-```tsx
-// With Clerk
+#### Add `<ClerkProvider />` to your root `layout.tsx` file
 
+<CodeBlockTabs type="installer" options={["App Router", "Pages Router"]}>
+
+```tsx filename="app/layout.tsx"
+import { ClerkProvider } from '@clerk/nextjs'
+import './globals.css'
+ 
+export default function RootLayout({
+  children,
+}: {
+  children: React.ReactNode
+}) {
+  return (
+    <ClerkProvider>
+      <html lang="en">
+        <body>{children}</body>
+      </html>
+    </ClerkProvider>
+  )
+}
+```
+
+```tsx filename="_app.tsx"
+import '@/styles/globals.css'
 import { ClerkProvider } from "@clerk/nextjs";
-
-export default function App({ Component, pageProps }) {
+import type { AppProps } from "next/app";
+function MyApp({ Component, pageProps }: AppProps) {
   return (
     <ClerkProvider {...pageProps}>
       <Component {...pageProps} />
     </ClerkProvider>
   );
 }
+export default MyApp;
 ```
+</CodeBlockTabs>
 
-## Middleware
+### Setup Sign-up and sign-in UI
 
-Replace NextAuth middleware with clerkMiddleware, use `protectedRoutes` as needed.
+#### Account Portal
 
-```tsx
-// With NextAuth.js
+Account Portal is the fastest way to authenticate your app. Clerk's Account Portal hosts the `<SignIn />`, `<SignUp />`, `<UserProfile />` and other components for your application. Read more about [Account Portal](docs/account-portal/getting-started). 
 
+To use the Account Portal, remove the routes that mount the NextAuth.js sign-in and sign-up UI. Replace the links to those routes with the [`<SignInButton>`](/docs/components/unstyled/sign-in-button) or [`<SignUpButton>`](/docs/components/unstyled/sign-out-button) components.
+
+#### Self-hosted UI
+
+If you want sign-in and sign-up pages in your own application, you can use [Clerk's pre-built components](/docs/references/nextjs/custom-signup-signin-pages), or implement the UI yourself using [Clerk's hooks](/docs/custom-flows/overview).
+
+#### Custom UI
+
+For fully custom UI, replace the existing functionality with [appropriate custom flows](/docs/custom-flows/overview#custom-flows). With Custom flows, you leverage Clerk's React hooks `useSignIn` and `useSignUp` to build fully custom UI that handles authentication with email and password, OAuth, magic links, OTP or any other authenication option Clerk offers.
+
+### Protect your app
+
+#### Middleware
+
+You will need to remove the NextAuth.js Middleware from your application, and replace it with the Clerk Middleware helper. NextAuth's middleware always rejects unauthorized requests. You may have additionally configured the Next.js middleware config to protect specific private routes. You will need to make note of this configuration so you can recreate it.
+
+##### Remove the NextAuth.js Middleware
+
+```tsx filename="middleware.ts"
 export { default } from "next-auth/middleware"
 
 export const config = { matcher: [/** private routes */] }
 ```
+##### Add Clerk's `authMiddleware()`
 
-```tsx
-// With Clerk
-import { clerkMiddleware, createRouteMatcher } from "@clerk/nextjs/server";
-import { NextResponse } from "next/server";
+The example below is the starting Middleware configuration. Please read the [`authMiddleware()`](docs/references/nextjs/auth-middleware) documentation to learn how to configuration your Middleware. Clerk's Middleware will, by default, run for your entire application and gives you fine-grained control over handling the authenticated state. 
 
-// opt into protection by adding routes to this array.
-const isProtectedRoute = createRouteMatcher([/** private routes */]);
-
-export default clerkMiddleware((auth, req) => {
-  // Check if the user visiting a protected route is logged in
-  // If not, redirect the user to the sign-in route
-  if (!auth().userId && isProtectedRoute(req)) {
-    return auth().redirectToSignIn();
-  }
-
-  // User isn't logged in and the route is public -- let them visit it
-  return NextResponse.next();
-});
-
+```tsx filename="middlewanre.ts"
+import { authMiddleware } from "@clerk/nextjs";
+ 
+// This example protects all routes including api/trpc routes
+// Please edit this to allow other routes to be public as needed.
+// See https://clerk.com/docs/references/nextjs/auth-middleware for more information about configuring your Middleware
+export default authMiddleware({});
+ 
 export const config = {
   matcher: ["/((?!.+\\.[\\w]+$|_next).*)", "/", "/(api|trpc)(.*)"],
 };
 ```
 
-NextAuth's middleware always rejects unauthorized requests, and you might be using the Next.js middleware config to protect specific private routes. Clerk's middleware can run for your entire application and gives you fine-grained control over handling the authenticated state. In this snippet, `createRouteMatcher` is used to define routes that should be protected, and the callback function checks for protected routes and redirects the user to a sign in page.
+##### Use Clerk's control components to control access
 
-### Use Clerk's control components to control access
+To conditionally render UI when the user is signed in, wrap it with [`<SignedIn>`](/docs/components/control/signed-in).
 
-To conditionally render UI when the user is signed in, wrap it with `[<SignedIn>](/docs/components/control/signed-in)`
+To conditionally render UI when the user is NOT signed in, wrap it with [`<SignedOut>`](/docs/components/control/signed-out).
 
-To conditionally render UI when the user is NOT signed in, wrap it with `[<SignedOut>](/docs/components/control/signed-out)`
-
-```tsx
-// With Clerk
-
-<SignedIn>
-  <div>You are signed in</div>
-</SignedIn>
-<SignedOut>
-  <div>You are signed out</div>
-</SignedOut>
-```
-
-## Reading user and session data
-
-Replace any `getServerSession(req, res, authOptions)` to Clerk's `[auth(req)](/docs/references/nextjs/auth#auth)` if you are using App Router and `[getAuth(req)](/docs/references/nextjs/get-auth#get-auth)` if you are using Pages Router.
-
-```tsx
-// With NextAuth.js
-
-export async function getServerSideProps(context) {
-  const session = await getServerSession(context.req, context.res, authOptions)
-	...
+```tsx filename="app/page.tsx"
+import { SignedIn, SignedOut } from "@clerk/nextjs";
+ 
+export default function Home() {
+  return (
+    <div>
+      <SignedOut>
+        <p>This content is public. Only signed out users can see this.</p>
+      </SignedOut>
+      <SignedIn>
+        <p>This content is private. Only signed in users can see this.</p>
+      </SignedIn>
+    </div>
+  )
 }
 ```
 
-```tsx
-// With Clerk
+### Read user and session data
+
+#### Server side
+
+Replace any `getServerSession(req, res, authOptions)` with Clerk's helpers.
+
+```tsx filename="app/page.tsx"
+import { getServerSession } from "next-auth";
+import { authOptions } from "@/pages/api/auth/[...nextauth]";
+
+export default function Home() {
+  const data = await getServerSession(authOptions);
+  console.log(data)
+
+  return (
+    <p>Home Page</p>
+  )
+}
+```
+
+Use [`auth()`](/docs/references/nextjs/auth#auth) if you are using App Router or [`getAuth()`](/docs/references/nextjs/get-auth#get-auth) if you are using Pages Router to read your user data.
+
+<CodeBlockTabs type="installer" options={["App Router", "Pages Router"]}>
+
+```tsx failename="app/page.tsx"
+import { auth, currentUser } from "@clerk/nextjs";
+ 
+export default async function Page() {
+ 
+  const { userId } = auth();
+  console.log(userId)
+
+  return (
+    <p>Home Page</p>
+  )
+
+}
+```
+
+```tsx filename="app/page.tsx"
 
 export async function getServerSideProps(context) {
   const session = getAuth(context.req);
-	...
+	
 	return { props: { ...buildClerkProps(ctx.req) } };
 };
 ```
+</CodeBlockTabs>
 
-Replace NextAuth's `useSession` with Clerk's `[useAuth()](/docs/references/react/use-auth)` if you need basic authentication information or `[useUser](/docs/references/react/use-user)` if you need the full user object.
+#### Client Side
 
-```tsx
-// With NextAuth.js
+Replace NextAuth's `useSession` with Clerk's hooks.
 
+```tsx filename="app/page.tsx"
+'use client'
 import { useSession } from "next-auth/react"
-...
-const { data: session } = useSession()
+
+export default function Home() {
+  const { data: session } = useSession()
+  console.log(session)
+
+  return (
+    <p>Home Page</p>
+  )
+}
 ```
 
-```tsx
-// With Clerk
+Use [`useAuth()`](/docs/references/react/use-auth) if you need basic authentication information or [`useUser()`](/docs/references/react/use-user) if you need the full user object.
 
+```tsx filename="app/page.tsx"
+'use client'
 import { useAuth, useUser } from "@clerk/nextjs";
-...
-const { userId, sessionId, getToken } = useAuth();
-const { isSignedIn, user } = useUser();
+
+export default function Home() {
+  const { userId, sessionId } = useAuth();
+  const { isSignedIn, user } = useUser();
+  console.log(userId, sessionId, isSignedIn, user)
+
+  return (
+    <p>Home Page</p>
+  )
+}
 ```
 
-### User IDs as Foreign Keys    
+### User IDs as Foreign Keys  
+
+When you migrate to Clerk, you will likely need to resolve the foreign key that you used in your database. If you used the userId from NextAuth.js, you could resolve this issue with one of the two following options.
 
 #### Use Clerk's `externalId` field
 
-When you migrate user data from NextAuth's database to Clerk, Clerk generates new user IDs for each user. If you are using existing user IDs as foreign keys in your database (e.g. in a `user_id` column), you can save those IDs as the user's `externalId` in Clerk.
+When you migrate user data from NextAuth's database to Clerk, Clerk generates new user IDs for each user. If you are using existing user IDs as foreign keys in your database (e.g. in a `user_id` column), you can save those IDs as the user's `externalId` in Clerk. This `externalId` can be included in the session token by adding the following [customization](/docs/backend-requests/making/custom-session-token). The following example will return the `externalId` if one is present, and if not will return the Clerk `userId`.
 
-This `externalId` can be included in the session token by [adding this customization](https://clerk.com/docs/backend-requests/making/custom-session-token) -
-`"userId": "{{user.external_id || user.id}}"`
+```json
+{
+	"userId": "{{user.external_id || user.id}}"
+}
+``` 
 
-In your application, you can access this id like this:
+In your application, you can access this 
 
 ```tsx
-const { sessionClaims: { userId } } = getAuth(req)
-const { userId, sessionId, getToken } = useAuth();
+import { auth } from "@clerk/nextjs";
+ 
+export default async function Page() {
+ 
+  const { sessionClaims: { userId } } = auth()
+  console.log(userId)
+
+  return (
+    <p>Home Page</p>
+  )
+
+}
 ```
 
-, you'll get the `externalId` for the migrated users, and the Clerk-generated ID for users who sign up after the migration.
+<Callout type="info">
+You can not access the above from the client side. If you are using one of Clerk's hooks then you will need to check if `externalID` exists and if not then read the `userId`. 
+</Callout>
 
 #### Update your database
 
@@ -220,35 +317,46 @@ Alternatively, after the data migration, you can update all the user IDs stored 
 
 You can read more about user IDs and user data migration in the migration script [README](https://github.com/clerk/migration-script?tab=readme-ov-file#handling-the-foreign-key-constraint).
 
-## Migrate users to a production instance
+### Create a production instance
 
-Every Clerk application has a Development and a Production instance. Before you start migrating user data, you will configure production instance and migrate your users directly into that instance.
+Every Clerk application has a Development and a Production instance. Before you start migrating user data, you will configure production instance and migrate your users directly into that instance. The [Deploying to Production](/docs/deployments/overview#deploying-to-production) page covers creating a production instance.
 
-*You can migrate a small set of users on the development instance for testing/staging.*
+You can migrate a small set of users on the development instance for testing/staging. To enable importing users to your development instance, add `IMPORT_TO_DEV_INSTANCE=true` to the `.env` for the migration script.
 
-The [Deploying to Production](/docs/deployments/overview#deploying-to-production) page covers creating a production instance.
-
-## Migrating User Data
+### Migrate User Data
 
 This walkthrough will help you move user data from your existing database to Clerk.
 
-*To retain the user data in your database for easy querying, check out the documentation on [data synchronization with webhooks](https://clerk.com/docs/users/sync-data).*
+To retain the user data in your database for easy querying, check out the documentation on [data synchronization with webhooks](/docs/users/sync-data).
 
 1. Clone `github.com/clerk/migration-script`
 2. Create a `.env` file in the root of the cloned repository with the `CLERK_SECRET_KEY` **of your production instance**.
-3. Export all the user data from your database into a users.json file
-    1. The file should be in the format described in the migration script readme and sample.
-    2. If you already have an API endpoint that returns a list of users you could use that.
+3. Export all the user data from your database into a users.json file. The file should be in the following format.
+```json filename="users.json"
+[
+  {
+    "userId": "string",
+    "email": "email",
+    "firstName": "string (optional)",
+    "lastName": "string (optional)",
+    "password": "string (optional)",
+    "passwordHasher": "argon2 | argon | bcrypt | md5 | pbkdf2_sha256 | pbkdf2_sha256_django | pbkdf2_sha1 | scrypt_firebase",
+  }
+]
+```
+4. If you already have an API endpoint in your NextAuth.js app that returns a list of users you could use that. Otherwise you will need to query your database to obtain the user information, or use an export function from a database management tool.
     
-    SQL example
+```sql
+  SELECT id as userId, email, name FROM users
+```
     
-    ```tsx
-    SELECT id as userId, email, name FROM users
-    ```
-    
-4. Follow the instructions in the migration script to move all the users into Clerk.
-5. Verify by signing in to your application secured by Clerk.
+5. Edit the `.env.` file in the migration, and add your Clerk Secret Key using `CLERK_SECRET_KEY`
+6. Run the script with `npm start`
+7. Verify by signing in to your application secured by Clerk, and by checking the users listed in the [Users](https://dashboard.clerk.com/last-active?path=users) section of the Clerk Dashboard.
+9. Check for an error log for any users that were not migreated successfully.
 
-## Further Support
+### Further Support
 
 This guide covers the most common steps that you would take for the migration. If you have more complex integrations with NextAuth that are not covered here, don't hesitate to hop into the Clerk discord and open a support question.
+
+</Steps>
