update missing response examples

--- a/docs/references/backend/organization/update-organization-membership-metadata.mdx
+++ b/docs/references/backend/organization/update-organization-membership-metadata.mdx
@@ -22,16 +22,53 @@ function updateOrganizationMembershipMetadata: (params: UpdateOrganizationMember
 
 ## `updateOrganizationMembershipMetadata()` example
 
-{/* TODO: The response on this was a pending promise? Idk, this needs to get looked at */}
-
-```tsx
+```tsx {31}
 const organizationId = 'org_2ZUtbk2yvnFGItdeze1ivCh3uqh';
 
 const userId = 'user_2V7JJKmoA9HqzHhfMqK5cpgLl56';
 
-const response = clerkClient.organizations.updateOrganizationMembershipMetadata(organizationId, userId, {
+const response = await clerkClient.organizations.updateOrganizationMembershipMetadata({
+  organizationId,
+  userId,
   publicMetadata:{
     "example": "this value is updated!"
   }
 });
+
+console.log(response);
+/* 
+_OrganizationMembership {
+  id: 'orgmem_2ZUtbeklm2DPSy7jsaLLwf6V8Nq',
+  role: 'org:admin',
+  publicMetadata: { example: 'this value is updated!' },
+  privateMetadata: {},
+  createdAt: 1702488558867,
+  updatedAt: 1707231338278,
+  organization: _Organization {
+    id: 'org_2ZUtbk2yvnFGItdeze1ivCh3uqh',
+    name: 'test',
+    slug: 'test',
+    imageUrl: 'https://img.clerk.com/eyJ0eXBlIjoiZGVmYXVsdCIsImlpZCI6Imluc18yVjdKRFdyclJwRmZFZTlqQUM2dWpSMG8xSlQiLCJyaWQiOiJvcmdfMlpVdGJrMnl2bkZHSXRkZXplMWl2Q2gzdXFoIiwiaW5pdGlhbHMiOiJUIn0',
+    hasImage: false,
+    createdBy: 'user_2V7JJKmoA9HqzHhfMqK5cpgLl56',
+    createdAt: 1702488558853,
+    updatedAt: 1707231200655,
+    publicMetadata: { example: 'metadata' },
+    privateMetadata: {},
+    maxAllowedMemberships: 3,
+    adminDeleteEnabled: true,
+    members_count: undefined
+  },
+  publicUserData: _OrganizationMembershipPublicUserData {
+    identifier: 'alexis@clerk.dev',
+    firstName: 'Alexis',
+    lastName: 'Aguilar',
+    imageUrl: 'https://img.clerk.com/eyJ0eXBlIjoicHJveHkiLCJzcmMiOiJodHRwczovL2ltYWdlcy5jbGVyay5kZXYvb2F1dGhfZ29vZ2xlL2ltZ18yVjdKSkhvdXlnbDNLRXRaUjlRRlFNbnVDU2cuanBlZyJ9',
+    hasImage: true,
+    userId: 'user_2V7JJKmoA9HqzHhfMqK5cpgLl56'
+  }
+}
+*/
 ```
+
+In this example, you can see that the returned `OrganizationMembership` object has its `publicMetadata` property updated with the new metadata that was provided.
