--- a/docs/references/backend/organization/update-organization-metadata.mdx
+++ b/docs/references/backend/organization/update-organization-metadata.mdx
@@ -21,12 +21,10 @@ function updateOrganizationMetadata: (organizationId: string, params: UpdateOrga
 
 ## `updateOrganizationMetadata()` example
 
-{/* TODO: Is returning a pending promise. need someone to help check this.. and then when I get this organization (using getOrganization), the metadata is not updated. so this is definitely not running correctly. */}
-
-```tsx
+```tsx {20}
 const organizationId = 'org_2ZUtbk2yvnFGItdeze1ivCh3uqh';
 
-const response = clerkClient.organizations.updateOrganizationMetadata(organizationId, {
+const response = await clerkClient.organizations.updateOrganizationMetadata(organizationId, {
   publicMetadata:{
     "example": "metadata"
   }
@@ -34,6 +32,22 @@ const response = clerkClient.organizations.updateOrganizationMetadata(organizati
 
 console.log(response);
 /*
-
+_Organization {
+  id: 'org_2ZUtbk2yvnFGItdeze1ivCh3uqh',
+  name: 'test',
+  slug: 'test',
+  imageUrl: 'https://img.clerk.com/eyJ0eXBlIjoiZGVmYXVsdCIsImlpZCI6Imluc18yVjdKRFdyclJwRmZFZTlqQUM2dWpSMG8xSlQiLCJyaWQiOiJvcmdfMlpVdGJrMnl2bkZHSXRkZXplMWl2Q2gzdXFoIiwiaW5pdGlhbHMiOiJUIn0',
+  hasImage: false,
+  createdBy: 'user_2V7JJKmoA9HqzHhfMqK5cpgLl56',
+  createdAt: 1702488558853,
+  updatedAt: 1706722339338,
+  publicMetadata: { example: 'metadata' },
+  privateMetadata: {},
+  maxAllowedMemberships: 3,
+  adminDeleteEnabled: true,
+  members_count: undefined
+}
 */
 ```
+
+In this example, you can see that the returned `Organization` object has its `publicMetadata` property updated with the new metadata that was provided.
