--- a/docs/references/backend/user/update-user-metadata.mdx
+++ b/docs/references/backend/user/update-user-metadata.mdx
@@ -21,12 +21,10 @@ function updateUserMetadata: (userId: string, params: UpdateUserMetadataParams) 
 
 ## `updateUserMetadata()` example
 
-{/* TODO: Is returning a pending promise. need someone to help check this.. */}
-
 ```tsx
 const userId = 'user_2bxfCJOe0Ocd8DNe9hFN3EXvfOu';
 
-const response = clerkClient.users.updateUserMetadata(userId, {
+const response = await clerkClient.users.updateUserMetadata(userId, {
   publicMetadata:{
     "example": "metadata"
   }
@@ -34,6 +32,65 @@ const response = clerkClient.users.updateUserMetadata(userId, {
 
 console.log(response);
 /*
-
+_User {
+  id: 'user_2bxfCJOe0Ocd8DNe9hFN3EXvfOu',
+  passwordEnabled: true,
+  totpEnabled: false,
+  backupCodeEnabled: false,
+  twoFactorEnabled: false,
+  banned: false,
+  createdAt: 1707161521327,
+  updatedAt: 1707231575639,
+  imageUrl: 'https://img.clerk.com/eyJ0eXBlIjoicHJveHkiLCJzcmMiOiJodHRwczovL2ltYWdlcy5jbGVyay5kZXYvb2F1dGhfZ29vZ2xlL2ltZ18yYnhmQ0pqZ3Yzb21rMzNHU3lZTzJhWEFvc1AifQ',
+  hasImage: true,
+  primaryEmailAddressId: 'idn_2bxp56VCiqMn4ClF3oMXBaF9iec',
+  primaryPhoneNumberId: null,
+  primaryWeb3WalletId: null,
+  lastSignInAt: 1707171558384,
+  externalId: null,
+  username: null,
+  firstName: 'test',
+  lastName: 'account',
+  publicMetadata: { example: 'metadata' },
+  privateMetadata: {},
+  unsafeMetadata: {},
+  emailAddresses: [
+    _EmailAddress {
+      id: 'idn_2bxp56VCiqMn4ClF3oMXBaF9iec',
+      emailAddress: 'alexmerona@gmail.com',
+      verification: null,
+      linkedTo: []
+    },
+    _EmailAddress {
+      id: 'idn_2bxfCHS6qr4dqtiL8BzjidDVwkR',
+      emailAddress: 'testclerk123@gmail.com',
+      verification: [_Verification],
+      linkedTo: [Array]
+    }
+  ],
+  phoneNumbers: [],
+  web3Wallets: [],
+  externalAccounts: [
+    _ExternalAccount {
+      id: 'idn_2bxfCN3UaowKZYKJJKcefzOLq0E',
+      provider: undefined,
+      identificationId: undefined,
+      externalId: undefined,
+      approvedScopes: 'email https://www.googleapis.com/auth/userinfo.email https://www.googleapis.com/auth/userinfo.profile openid profile',
+      emailAddress: 'testclerk123@gmail.com',
+      firstName: undefined,
+      lastName: undefined,
+      imageUrl: undefined,
+      username: null,
+      publicMetadata: {},
+      label: null,
+      verification: [_Verification]
+    }
+  ],
+  lastActiveAt: 1707091200000,
+  createOrganizationEnabled: true
+}
 */
 ```
+
+In this example, you can see that the returned `User` object has has its `publicMetadata` property updated with the new metadata that was provided.
