--- a/docs/guides/nextauth-migration.mdx
+++ b/docs/guides/nextauth-migration.mdx
@@ -353,7 +353,7 @@ To retain the user data in your database for easy querying, check out the docume
 5. Edit the `.env.` file in the migration, and add your Clerk Secret Key using `CLERK_SECRET_KEY`
 6. Run the script with `npm start`
 7. Verify by signing in to your application secured by Clerk, and by checking the users listed in the [Users](https://dashboard.clerk.com/last-active?path=users) section of the Clerk Dashboard.
-9. Check for an error log for any users that were not migreated successfully.
+9. Check for an error log for any users that were not migrated successfully.
 
 ### Further Support
 
