--- a/docs/guides/nextauth-migration.mdx
+++ b/docs/guides/nextauth-migration.mdx
@@ -156,7 +156,7 @@ export const config = { matcher: [/** private routes */] }
 
 The example below is the starting Middleware configuration. Please read the [`authMiddleware()`](docs/references/nextjs/auth-middleware) documentation to learn how to configuration your Middleware. Clerk's Middleware will, by default, run for your entire application and gives you fine-grained control over handling the authenticated state. 
 
-```tsx filename="middlewanre.ts"
+```tsx filename="middleware.ts"
 import { authMiddleware } from "@clerk/nextjs";
  
 // This example protects all routes including api/trpc routes
