--- a/docs/guides/nextauth-migration.mdx
+++ b/docs/guides/nextauth-migration.mdx
@@ -137,7 +137,7 @@ If you want sign-in and sign-up pages in your own application, you can use [Cler
 
 #### Custom UI
 
-For fully custom UI, replace the existing functionality with [appropriate custom flows](/docs/custom-flows/overview#custom-flows). With Custom flows, you leverage Clerk's React hooks `useSignIn` and `useSignUp` to build fully custom UI that handles authentication with email and password, OAuth, magic links, OTP or any other authenication option Clerk offers.
+For fully custom UI, replace the existing functionality with [appropriate custom flows](/docs/custom-flows/overview#custom-flows). With Custom flows, you leverage Clerk's React hooks `useSignIn` and `useSignUp` to build fully custom UI that handles authentication with email and password, OAuth, magic links, OTP or any other authentication option Clerk offers.
 
 ### Protect your app
 
