--- a/docs/guides/nextauth-migration.mdx
+++ b/docs/guides/nextauth-migration.mdx
@@ -290,9 +290,9 @@ When you migrate user data from NextAuth's database to Clerk, Clerk generates ne
 }
 ``` 
 
-In your application, you can access this 
+In your application, you can access this combined `userId` via session claims.
 
-```tsx
+```tsx filename="app/page.tsx"
 import { auth } from "@clerk/nextjs";
  
 export default async function Page() {
