--- a/docs/guides/nextauth-migration.mdx
+++ b/docs/guides/nextauth-migration.mdx
@@ -123,7 +123,7 @@ export default MyApp;
 ```
 </CodeBlockTabs>
 
-### Setup Sign-up and sign-in UI
+### Setup sign-up and sign-in UI
 
 #### Account Portal
 
