--- a/docs/guides/nextauth-migration.mdx
+++ b/docs/guides/nextauth-migration.mdx
@@ -315,7 +315,7 @@ You can not access the above from the client side. If you are using one of Clerk
 
 Alternatively, after the data migration, you can update all the user IDs stored in your database as a foreign key to the new Clerk user IDs.
 
-You can read more about user IDs and user data migration in the migration script [README](https://github.com/clerk/migration-script?tab=readme-ov-file#handling-the-foreign-key-constraint).
+You can read more about user IDs and user data migration in the [Migration Script README](https://github.com/clerk/migration-script?tab=readme-ov-file#handling-the-foreign-key-constraint).
 
 ### Create a production instance
 
