add references to objects

--- a/docs/references/backend/allowlist/get-allowlist-identifier-list.mdx
+++ b/docs/references/backend/allowlist/get-allowlist-identifier-list.mdx
@@ -13,11 +13,13 @@ function getAllowlistIdentifier: () => Promise<PaginatedResourceResponse<Allowli
 
 ## `getAllowlistIdentifierList()` example
 
+In this example, you can see that the returned [`PaginatedResourceResponse`](/docs/references/backend/types/paginated-resource-response) includes `data`, which is an array of `AllowlistIdentifier` objects, and `totalCount`, which indicates the total number of allowlist identifiers in the system.
+
 ```tsx
 const response = await clerkClient.allowlistIdentifiers.getAllowlistIdentifierList();
 
 console.log(response);
-/* In this example, you can see that data is an array of AllowlistIdentifier objects, and is populated with only one AllowlistIdentifier.
+/* 
 {
   data: [
     _AllowlistIdentifier {
