--- a/docs/references/backend/email-addresses/create-email-address.mdx
+++ b/docs/references/backend/email-addresses/create-email-address.mdx
@@ -5,7 +5,7 @@ description: Creates an email address for the specified user.
 
 # `createEmailAddress()`
 
-Creates an email address for the specified user.
+Creates an [`EmailAddress`](/docs/references/javascript/email-address/email-address) for the specified user.
 
 ```tsx
 function createEmailAddress: (params: CreateEmailAddressParams) => Promise<EmailAddress>;
