--- a/docs/references/backend/email-addresses/delete-email-address.mdx
+++ b/docs/references/backend/email-addresses/delete-email-address.mdx
@@ -5,7 +5,7 @@ description: Deletes an email address for a given ID.
 
 # `deleteEmailAddress()`
 
-Deletes an email address for a given ID.
+Deletes an [`EmailAddress`](/docs/references/javascript/email-address/email-address) for a given ID.
 
 ```tsx
 function deleteEmailAddress: (emailAddressId: string) => Promise<EmailAddress>;
