--- a/docs/references/backend/email-addresses/get-email-address.mdx
+++ b/docs/references/backend/email-addresses/get-email-address.mdx
@@ -5,7 +5,7 @@ description: Retrieves a single email address by its ID, if the ID is valid.
 
 # `getEmailAddress()`
 
-Retrieves a single email address by its ID, if the ID is valid. 
+Retrieves a single [`EmailAddress`](/docs/references/javascript/email-address/email-address) by its ID.
 
 ```tsx
 function getEmailAddress: (emailAddressId: string) => Promise<EmailAddress>;
