--- a/docs/references/backend/email-addresses/update-email-address.mdx
+++ b/docs/references/backend/email-addresses/update-email-address.mdx
@@ -5,7 +5,7 @@ description: Updates an email address with a given ID with attribute values prov
 
 # `updateEmailAddress()`
 
-Updates an email address with a given ID with attribute values provided in a params object.
+Updates an [`EmailAddress`](/docs/references/javascript/email-address/email-address) with a given ID with attribute values provided in a params object.
 
 ```tsx
 function updateEmailAddress: (emailAddressId: string, params: UpdateEmailAddressParams) => Promise<EmailAddress>;
@@ -45,7 +45,7 @@ _EmailAddress {
 
 Let's update the email address to be unverified:
 
-```tsx
+```tsx {12-13}
 const emailAddressId = 'idn_2bxp56VCiqMn4ClF3oMXBaF9iec';
 
 const params = { verified: false }; 
