--- a/docs/references/backend/organization/create-organization-invitation.mdx
+++ b/docs/references/backend/organization/create-organization-invitation.mdx
@@ -5,7 +5,7 @@ description: Creates an invitation for new users to join an organization.
 
 # `createOrganizationInvitation()`
 
-Creates an invitation for new users to join an organization. 
+Creates an [`OrganizationInvitation`](/docs/references/javascript/organization-invitation) for new users to join an organization. 
 
 ```tsx
 function createOrganizationInvitation: (params: CreateOrganizationInvitationParams) => Promise<OrganizationInvitation>;
