--- a/docs/references/backend/organization/create-organization-membership.mdx
+++ b/docs/references/backend/organization/create-organization-membership.mdx
@@ -5,7 +5,7 @@ description: Creates membership to an organization for a user directly (circumve
 
 # `createOrganizationMembership()` 
 
-Creates membership to an organization for a user directly (circumventing the need for an invitation). 
+Creates a membership to an organization for a user directly (circumventing the need for an invitation). 
 
 ```tsx
 function createOrganizationMembership: (params: CreateOrganizationMembershipParams) => Promise<OrganizationMembership>;
@@ -21,6 +21,8 @@ function createOrganizationMembership: (params: CreateOrganizationMembershipPara
 
 ## `createOrganizationMembership()` example
 
+In this example, an [`OrganizationMembership`](/docs/references/javascript/organization-membership) is created for a user with the role `org:member`.
+
 ```tsx
 const organizationId = 'org_2ZUtbk2yvnFGItdeze1ivCh3uqh';
 
@@ -28,7 +30,7 @@ const userId = 'user_2VdArFEn2gfBqt8sRePmsVPyDHv';
 
 const role = 'org:member';
 
-const response = await clerkClient.organizations.createOrganizationMembership({organizationId, userId, role});
+const response = await clerkClient.organizations.createOrganizationMembership({ organizationId, userId, role });
 
 console.log(response);
 /* 
