--- a/docs/references/backend/organization/create-organization.mdx
+++ b/docs/references/backend/organization/create-organization.mdx
@@ -5,7 +5,7 @@ description: Creates an organization.
 
 # `createOrganization()`
 
-Creates an organization. 
+Creates an [`Organization`](/docs/references/javascript/organization/organization). 
 
 ```tsx
 function createOrganization: (params: CreateParams) => Promise<Organization>;
@@ -16,8 +16,8 @@ function createOrganization: (params: CreateParams) => Promise<Organization>;
 | Name | Type | Description |
 | --- | --- | --- |
 | `name` | `string` | Name of the organization. |
-| `slug?` | `string` | Slug of the organization. |
 | `createdBy` | `string` | The user ID for the user creating the organization. The user will become an administrator for the organization. |
+| `slug?` | `string` | Slug of the organization. |
 | `publicMetadata?` | `Record<string, unknown>` | Metadata saved on the organization, that is visible to both your Frontend and Backend APIs. |
 | `privateMetadata?` | `Record<string, unknown>` | Metadata saved on the organization that is only visible to your Backend API. |
 
