--- a/docs/references/backend/organization/delete-organization.mdx
+++ b/docs/references/backend/organization/delete-organization.mdx
@@ -5,7 +5,7 @@ description: Deletes an organization given a valid ID.
 
 # `deleteOrganization()`
 
-Deletes an organization given a valid ID.
+Deletes an [`Organization`](/docs/references/javascript/organization/organization) given a valid ID.
 
 ```tsx
 function deleteOrganization: (organizationId: string) => Promise<Organization>;
