--- a/docs/references/backend/organization/get-organization-invitation-list.mdx
+++ b/docs/references/backend/organization/get-organization-invitation-list.mdx
@@ -24,6 +24,8 @@ function getOrganizationInvitationList: (params: GetOrganizationInvitationListPa
 
 ### `getOrganizationInvitationList({ organizationId})`
 
+In this example, you can see that the returned [`PaginatedResourceResponse`](/docs/references/backend/types/paginated-resource-response) includes `data`, which is an array of [`OrganizationInvitation`](/docs/references/javascript/organization-invitation) objects, and `totalCount`, which indicates the total number of organization invitations in the system for the specified organization.
+
 ```tsx
 const organizationId = 'org_2ZUtbk2yvnFGItdeze1ivCh3uqh';
 
