--- a/docs/references/backend/organization/get-organization-list.mdx
+++ b/docs/references/backend/organization/get-organization-list.mdx
@@ -23,12 +23,14 @@ function getOrganizationList: (params: GetOrganizationListParams) => Promise<Pag
 
 ### `getOrganizationList()` with no parameters
 
+In this example, you can see that the returned [`PaginatedResourceResponse`](/docs/references/backend/types/paginated-resource-response) includes `data`, which is an array of [`Organization`](/docs/references/javascript/organization/organization) objects, and `totalCount`, which indicates the total number of organizations in the system.
+
 ```tsx
 const response = await clerkClient.organizations.
 getOrganizationList();
 
 console.log(response);
-/* In this example, you can see that data is an array of Organization objects, and is populated with 10 out of 25 Organizations. 
+/*
 {
   data: [
     _Organization {
