--- a/docs/references/backend/organization/get-organization.mdx
+++ b/docs/references/backend/organization/get-organization.mdx
@@ -5,7 +5,7 @@ description: Retrieves a single organization by the organization ID, if the ID i
 
 # `getOrganization()`
 
-Retrieves a single organization by the organization ID, if the ID is valid.
+Retrieves a single [`Organization`](/docs/references/javascript/organization/organization) by the organization ID, if the ID is valid.
 
 ```tsx
 function getOrganization: (params: GetOrganizationParams) => Promise<Organization>;
@@ -19,7 +19,7 @@ function getOrganization: (params: GetOrganizationParams) => Promise<Organizatio
 
 ## `getOrganization()` examples
 
-### `getOrganization()` with no parameters 
+### `getOrganization({ organizationId })` 
 
 ```tsx
 const organizationId = 'org_2ZUtbk2yvnFGItdeze1ivCh3uqh';
