--- a/docs/references/backend/organization/revoke-organization-invitation.mdx
+++ b/docs/references/backend/organization/revoke-organization-invitation.mdx
@@ -21,7 +21,9 @@ function revokeOrganizationInvitation: (params: RevokeOrganizationInvitationPara
 
 ## `revokeOrganizationInvitation()` example
 
-```tsx
+In this example, you can see that the returned [`OrganizationInvitation`](/docs/references/javascript/organization-invitation) object has a `status` of `'revoked'`.
+
+```tsx {18}
 const organizationId = 'org_2ZUtbk2yvnFGItdeze1ivCh3uqh';
 
 const invitationId = 'orginv_2b6b8BKxYmCdSNYtEBdk2aQSlyY';
@@ -31,7 +33,7 @@ const requestingUserId = 'user_2V7JJKmoA9HqzHhfMqK5cpgLl56';
 const response = await clerkClient.organizations.revokeOrganizationInvitation({organizationId, invitationId, requestingUserId});
 
 console.log(response);
-/* In this example, you can see that the response is an OrganizationInvitation object. The 'status' is now 'revoked'.
+/*
 _OrganizationInvitation {
   id: 'orginv_2b6b8BKxYmCdSNYtEBdk2aQSlyY',
   emailAddress: 'testclerk123@gmail.com',
