--- a/docs/references/backend/organization/update-organization-membership-metadata.mdx
+++ b/docs/references/backend/organization/update-organization-membership-metadata.mdx
@@ -22,7 +22,9 @@ function updateOrganizationMembershipMetadata: (params: UpdateOrganizationMember
 
 ## `updateOrganizationMembershipMetadata()` example
 
-```tsx {31}
+In this example, you can see that the returned [`OrganizationMembership`](/docs/references/javascript/organization-membership) object has its `publicMetadata` property updated with the new metadata provided.
+
+```tsx {8-10, 18}
 const organizationId = 'org_2ZUtbk2yvnFGItdeze1ivCh3uqh';
 
 const userId = 'user_2V7JJKmoA9HqzHhfMqK5cpgLl56';
@@ -70,5 +72,3 @@ _OrganizationMembership {
 }
 */
 ```
-
-In this example, you can see that the returned `OrganizationMembership` object has its `publicMetadata` property updated with the new metadata that was provided.
