--- a/docs/references/backend/organization/update-organization-membership.mdx
+++ b/docs/references/backend/organization/update-organization-membership.mdx
@@ -21,7 +21,9 @@ function updateOrganizationMembership: (params: UpdateOrganizationMembershipPara
 
 ## `updateOrganizationMembership()` example
 
-```tsx
+In this example, you can see that the returned [`OrganizationMembership`](/docs/references/javascript/organization-membership) object has its `role` property updated to `org:admin`.
+
+```tsx {5, 13}
 const organizationId = 'org_2ZUtbk2yvnFGItdeze1ivCh3uqh';
 
 const userId = 'user_2V7JJKmoA9HqzHhfMqK5cpgLl56';
