--- a/docs/references/backend/organization/update-organization-metadata.mdx
+++ b/docs/references/backend/organization/update-organization-metadata.mdx
@@ -21,7 +21,9 @@ function updateOrganizationMetadata: (organizationId: string, params: UpdateOrga
 
 ## `updateOrganizationMetadata()` example
 
-```tsx {20}
+In this example, you can see that the returned [`Organization`](/docs/references/javascript/organization/organization) object has its `publicMetadata` property updated with the new metadata provided.
+
+```tsx {4-6, 20}
 const organizationId = 'org_2ZUtbk2yvnFGItdeze1ivCh3uqh';
 
 const response = await clerkClient.organizations.updateOrganizationMetadata(organizationId, {
@@ -49,5 +51,3 @@ _Organization {
 }
 */
 ```
-
-In this example, you can see that the returned `Organization` object has its `publicMetadata` property updated with the new metadata that was provided.
