--- a/docs/references/backend/organization/update-organization.mdx
+++ b/docs/references/backend/organization/update-organization.mdx
@@ -5,7 +5,7 @@ description: Updates the organization name.
 
 # `updateOrganization()`
 
-Updates an organization given a valid organization ID. 
+Updates an [`Organization`](/docs/references/javascript/organization/organization) given a valid organization ID. 
 
 ```tsx
 function updateOrganization: (params: UpdateOrganizationParams) => Promise<Organization>;
@@ -23,7 +23,9 @@ function updateOrganization: (params: UpdateOrganizationParams) => Promise<Organ
 
 ## `updateOrganization()` example
 
-```tsx
+In this example, the name of the organization is updated.
+
+```tsx {3, 11}
 const organizationId = 'org_2ZUtbk2yvnFGItdeze1ivCh3uqh';
 
 const name = 'Test Updated';
