--- a/docs/references/backend/phone-numbers/get-phone-number.mdx
+++ b/docs/references/backend/phone-numbers/get-phone-number.mdx
@@ -5,7 +5,7 @@ description: Retrieves a single phone number by its ID, if the ID is valid.
 
 # `getPhoneNumber()`
 
-Retrieves a single phone number by its ID, if the ID is valid. 
+Retrieves a single [`PhoneNumber`](/docs/references/javascript/phone-number/phone-number) by its ID, if the ID is valid. 
 
 ```tsx
 function getPhoneNumber: (phoneNumberId: string) => Promise<PhoneNumber>;
