--- a/docs/references/backend/phone-numbers/update-phone-number.mdx
+++ b/docs/references/backend/phone-numbers/update-phone-number.mdx
@@ -5,7 +5,7 @@ description: Updates a phone number with a given ID with attribute values provid
 
 # `updatePhoneNumber()`
 
-Updates a phone number with a given ID with attribute values provided in a params object.
+Updates a [`PhoneNumber`](/docs/references/javascript/phone-number/phone-number) with a given ID with attribute values provided in a params object.
 
 ```tsx
 function updatePhoneNumber: (phoneNumberId: string, params: UpdatePhoneNumberParams) => Promise<PhoneNumber>;
@@ -42,7 +42,7 @@ _PhoneNumber {
 
 Let's update the phone number to be unverified:
 
-```tsx
+```tsx {3, 14-15}
 const phoneNumberId = 'idn_2bxwW8Fa5Y53QcESgQ6HkTo0cgh';
 
 const params = { verified: false }; 
