--- a/docs/references/backend/user/create-user.mdx
+++ b/docs/references/backend/user/create-user.mdx
@@ -5,7 +5,7 @@ description: Creates a user. Your user management settings determine how you sho
 
 # `createUser()`
 
-Creates a user. Your user management settings determine how you should setup your user model.
+Creates a [`User`](/docs/references/backend/types/backend-user). Your user management settings determine how you should setup your user model.
 
 Any email address and phone number created using this method will be automatically marked as verified.
 
@@ -30,6 +30,8 @@ function createUser: (params: CreateUserParams) => Promise<User>;
 
 ## `createUser()` example
 
+In this example, you can see that the returned response is the created `User` object, with `firstName` as `"Test"`, `lastName` as `"User"`, and `emailAddress` as an array of email addresses, which would include `'testclerk123@gmail.com'`.
+
 ```tsx
 const response = await clerkClient.users.createUser({
   firstName: "Test",
@@ -38,7 +40,7 @@ const response = await clerkClient.users.createUser({
 })
 
 console.log(response);
-/* In this example, you can see that the response is the created User object, with `firstName` as "Test", `lastName` as "User", and `emailAddress` as an array of email addresses, which would include "testclerk123@gmail.com".
+/*
 _User {
   id: 'user_2b8kQleSRNmcOSCdJ1Y8pSRr4mK',
   passwordEnabled: false,
