--- a/docs/references/backend/user/delete-user.mdx
+++ b/docs/references/backend/user/delete-user.mdx
@@ -5,7 +5,7 @@ description: Deletes a user given a valid ID.
 
 # `deleteUser()`
 
-Deletes a user given a valid ID.
+Deletes a [`User`](/docs/references/backend/types/backend-user) given a valid ID.
 
 ```tsx
 function deleteUser: (userId: string) => Promise<User>;
