--- a/docs/references/backend/user/get-organization-membership-list.mdx
+++ b/docs/references/backend/user/get-organization-membership-list.mdx
@@ -23,13 +23,15 @@ function getOrganizationMembershipList: (params: GetOrganizationMembershipListPa
 
 ### `getOrganizationMembershipList({ userId })`
 
+In this example, you can see that the returned [`PaginatedResourceResponse`](/docs/references/backend/types/paginated-resource-response) includes `data`, which is an array of [`OrganizationMembership`](/docs/references/javascript/organization-membership) objects, and `totalCount`, which indicates the total number of organization memberships in the system for the specified organization.
+
 ```tsx
 const userId = 'user_2V7JJKmoA9HqzHhfMqK5cpgLl56';
 
 const response = await clerkClient.users.getOrganizationMembershipList({ userId });
 
 console.log(response);
-/* In this example, you can see that data is an array of OrganizationMembership objects, and is populated with two OrganizationMemberships.
+/* 
 {
   data: [
     _OrganizationMembership {
