--- a/docs/references/backend/user/get-user-list.mdx
+++ b/docs/references/backend/user/get-user-list.mdx
@@ -30,11 +30,15 @@ function getUserList(): (params: UserListParams) => Promise<PaginatedResourceRes
 
 ### `getUserList()` with no parameters
 
+In this example, you can see that the returned [`PaginatedResourceResponse`](/docs/references/backend/types/paginated-resource-response) includes `data`, which is an array of [`User`](/docs/references/backend/types/backend-user) objects, and `totalCount`, which indicates the total number of users for the application.
+
+While the response can return up to 10 data items, for the sake of brevity, only two are shown in this example response.
+
 ```tsx
 const response = await clerkClient.users.getUserList();
 
 console.log(response);
-/* In this example, you can see that data is an array of User objects, and is populated with 10 Users. For the sake of brevity, we have only shown the first two. 
+/*
 {
   data: [
     _User {
