--- a/docs/references/backend/user/get-user-oauth-access-token.mdx
+++ b/docs/references/backend/user/get-user-oauth-access-token.mdx
@@ -20,6 +20,8 @@ function getUserOauthAccessToken: (userId: string, provider: `oauth_${OAuthProvi
 
 ## `getUserOauthAccessToken()` example
 
+In this example, you can see that the returned [`PaginatedResourceResponse`](/docs/references/backend/types/paginated-resource-response) includes `data`, which is an array of `OauthAccessToken` objects, and `totalCount`, which indicates the total number of access tokens for the specified user.
+
 ```tsx
 const userId = 'user_2bxfCJOe0Ocd8DNe9hFN3EXvfOu';
 
