--- a/docs/references/backend/user/get-user.mdx
+++ b/docs/references/backend/user/get-user.mdx
@@ -5,7 +5,7 @@ description: Retrieves a single user by their ID, if the ID is valid.
 
 # `getUser()`
 
-Retrieves a single user by their ID, if the ID is valid. 
+Retrieves a single [`User`](/docs/references/backend/types/backend-user) by their ID, if the ID is valid. 
 
 ```tsx
 function getUser: (sessionId: string) => Promise<User>;
