--- a/docs/references/backend/user/update-user.mdx
+++ b/docs/references/backend/user/update-user.mdx
@@ -5,7 +5,7 @@ description: Updates a user with a given ID with attribute values provided in a 
 
 # `updateUser()`
 
-Updates a user with a given ID with attribute values provided in a params object.
+Updates a [`User`](/docs/references/backend/types/backend-user) with a given ID with attribute values provided in a params object.
 
 The provided ID must be valid, otherwise an error will be thrown.
 
@@ -32,7 +32,9 @@ function updateUser: (userId: string, params: UpdateUserParams) => Promise<User>
 
 ## `updateUser()` example
 
-```tsx
+In this example, you can see that the response is the updated `User` object, with a `firstName` and `lastName` of `"John"` and `"Wick"` respectively.
+
+```tsx {3, 28-29}
 const userId = 'user_2b8kQleSRNmcOSCdJ1Y8pSRr4mK';
 
 const params = { firstName: 'John', lastName: 'Wick' }; 
@@ -40,7 +42,7 @@ const params = { firstName: 'John', lastName: 'Wick' };
 const response = await clerkClient.users.updateUser(userId, params);
 
 console.log(response);
-/* In this example, you can see that the response is the updated User object, with a `firstName` and `lastName` of "John" and "Wick" respectively.
+/*
 _User {
   id: 'user_2b8kQleSRNmcOSCdJ1Y8pSRr4mK',
   passwordEnabled: false,
