--- a/docs/references/backend/phone-numbers/create-phone-number.mdx
+++ b/docs/references/backend/phone-numbers/create-phone-number.mdx
@@ -5,7 +5,7 @@ description: Creates a phone number for the specified user.
 
 # `createPhoneNumber()`
 
-Creates a phone number for the specified user.
+Creates a [`PhoneNumber`](/docs/references/javascript/phone-number/phone-number) for the specified user.
 
 ```tsx
 function createPhoneNumber: (params: CreatePhoneNumberParams) => Promise<PhoneNumber>;
