--- a/docs/references/backend/phone-numbers/delete-phone-number.mdx
+++ b/docs/references/backend/phone-numbers/delete-phone-number.mdx
@@ -5,7 +5,7 @@ description: Deletes a phone number for a given ID.
 
 # `deletePhoneNumber()`
 
-Deletes a phone number for a given ID.
+Deletes a [`PhoneNumber`](/docs/references/javascript/phone-number/phone-number) for a given ID.
 
 ```tsx
 function deletePhoneNumber: (phoneNumberId: string) => Promise<PhoneNumber>;
