--- a/docs/references/backend/redirect-urls/get-redirect-url-list.mdx
+++ b/docs/references/backend/redirect-urls/get-redirect-url-list.mdx
@@ -13,11 +13,13 @@ function getRedirectUrlList(): () => Promise<PaginatedResourceResponse<RedirectU
 
 ## `getRedirectUrlList()` example
 
+In this example, you can see that the returned [`PaginatedResourceResponse`](/docs/references/backend/types/paginated-resource-response) includes `data`, which is an array of `RedirectUrl` objects, and `totalCount`, which indicates the total number of redirect URLs in the system.
+
 ```tsx
 const response = await clerkClient.redirectUrls.getRedirectUrlList();
 
 console.log(response);
-/* In this example, you can see that data is an array of RedirectUrl objects, and is populated with one RedirectUrl.
+/* 
 {
   data: [
     _RedirectUrl {
