--- a/docs/references/backend/user/update-user-metadata.mdx
+++ b/docs/references/backend/user/update-user-metadata.mdx
@@ -21,7 +21,9 @@ function updateUserMetadata: (userId: string, params: UpdateUserMetadataParams) 
 
 ## `updateUserMetadata()` example
 
-```tsx
+In this example, you can see that the returned [`User`](/docs/references/backend/types/backend-user) object has its `publicMetadata` property updated with the new metadata provided. 
+
+```tsx {3-6, 30}
 const userId = 'user_2bxfCJOe0Ocd8DNe9hFN3EXvfOu';
 
 const response = await clerkClient.users.updateUserMetadata(userId, {
